--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
+    "@tanstack/react-query": "^5.56.2",
+    "@types/react-datepicker": "^7.0.0",
+    "axios": "^1.7.7",
+    "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.11"
+    "react-datepicker": "^7.3.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.5",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.11"
+    "eslint-config-next": "14.2.11",
+    "postcss": "^8.4.47",
+    "prisma": "^5.19.1",
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2"
   }
 }
