--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/react-datepicker": "^7.0.0",
     "axios": "^1.7.7",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "next": "14.2.11",
     "react": "^18",
     "react-datepicker": "^7.3.0",
