--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "14.2.11",
     "react": "^18",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
