--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
     "@prisma/client": "^5.19.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/react-datepicker": "^7.0.0",
     "axios": "^1.7.7",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "lodash.debounce": "^4.0.8",
+    "material-react-table": "^3.0.1",
     "next": "14.2.11",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-select": "^5.8.1",
+    "swr": "^2.2.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "autoprefixer": "^10.4.20",
