--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^6.1.4",
     "@prisma/client": "^5.19.1",
     "@tanstack/react-query": "^5.56.2",
+    "@types/lodash": "^4.17.12",
     "@types/react-datepicker": "^7.0.0",
     "axios": "^1.7.7",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "material-react-table": "^3.0.1",
     "next": "14.2.11",
